content/manual/v8.3/source/includes/changelogs/releases/8.0.24.rst
.. _8.0.24-changelog:

8.0.24 Changelog
----------------

Security
~~~~~~~~

:issue:`SERVER-123370` LDAP query password is logged when set through
setParameter

Sharding
~~~~~~~~

:issue:`SERVER-116284` Ensure MultiStatementTransactionRequestsSender
sends commitTransaction to all shards before processing results

Replication
~~~~~~~~~~~

:issue:`SERVER-106165` Majority secondaries lagging for 30s post a
failover breaching read/write SLA

Storage
~~~~~~~


WiredTiger
``````````

- :issue:`WT-13290` Handle fast truncated pages during RTS for VLCS
- :issue:`WT-13985` Did not run a sweep for 60 minutes in
  test_prepare_hs01 for CS
- :issue:`WT-15039` Allow a higher number of eviction threads
- :issue:`WT-15739` Fix reconciliation leaking overflow pages
- :issue:`WT-15830` Add stats to track how many saved update list and
  total number of updates processed in __wti_rec_hs_insert_updates
- :issue:`WT-16515` Fix statistics for clean pages seen and queued by
  eviction

Operations
~~~~~~~~~~

- :issue:`SERVER-93800` Implement appendFile() in mongo shell extensions
- :issue:`WT-16379` Crash during recovery due to corrupted journal file
  leads to repeated creation of new journal files on restart

Build and Packaging
~~~~~~~~~~~~~~~~~~~

:issue:`SERVER-119929` Make change streams oplog filter use an include
list

Internals
~~~~~~~~~

- :issue:`SERVER-94001` Continue with logical session cache refresh
  process even if refresh fails
- :issue:`SERVER-94574` Set skipEnforceFastCountOnValidate when using
  FCBIS in validation hook threads
- :issue:`SERVER-95773` Resharding does not need to sample documents if
  the key is hashed
- :issue:`SERVER-100441` mongos findAndModify implementation tries to
  abort a non-existent txn
- :issue:`SERVER-101385` Stepdown can deadlock with curOp + resharding.
- :issue:`SERVER-104223` Failures in preWarmConnectionPool() will cause
  mongos to fail startup
- :issue:`SERVER-104343` unsupportedSyncSource server parameter can
  cause invariant
- :issue:`SERVER-104464` Handle missing index idents during replica set
  startup recovery after unclean shutdown
- :issue:`SERVER-104828` Ban the featureFlagRouterPort and remove its
  testing
- :issue:`SERVER-106903` Make QueryAnalysisCoordinator::onSamplerDelete
  less error prone
- :issue:`SERVER-106935` Retry rmtree OSError failure
- :issue:`SERVER-107105` Use MODE_IX instead of MODE_X collection/db
  lock when exiting the critical section
- :issue:`SERVER-107966` A SingleServerPingMonitor within the RSM can
  get disabled and never reenabled
- :issue:`SERVER-108801` Invalid collMod command with timeseries
  granularity change creates collection options inconsistency
- :issue:`SERVER-108938` Possible double counting of indexes in
  "indexStats" statistics
- :issue:`SERVER-109161` [v8.0] Inconsistent state between opCtx and
  recovery unit after aborting WUOW
- :issue:`SERVER-109508` Update building docs to point at v5 toolchain
  version
- :issue:`SERVER-109609` allDurableTimestamp is kTimestampOne after
  initial sync and did not advance while/before transitioning to primary
- :issue:`SERVER-109630` Skip assertion that analyzeShardKeyNumRanges
  matches value in TestData in analyze_shard_key.js if config fuzzer
  enabled
- :issue:`SERVER-111191` Reduce impact of the database profiler
- :issue:`SERVER-112342` ServerStatus should have a parameter to exclude
  all fields
- :issue:`SERVER-113659` Add error label from chunk migration aborting
  when existing document is found
- :issue:`SERVER-113865` (Replication) Audit all non-runtime settable
  server parameters
- :issue:`SERVER-114384` $$NOW can be different in sub-pipelines
- :issue:`SERVER-114938` backport more auto_header ignores
- :issue:`SERVER-115250` Pause JWKSetRefreshJob during quiesce time
- :issue:`SERVER-115307` Always log optime when replication fails to
  apply an operation
- :issue:`SERVER-115576` Resmoke should not rely on the mongo shell from
  an old version
- :issue:`SERVER-115585` Handle FTDC BSON exceeding standard size
- :issue:`SERVER-116089` Add lock acquisition timeouts to migration's
  recipient critical section
- :issue:`SERVER-116100` Prevent out-of-sync MODULE.bazel.lock
- :issue:`SERVER-116528` Race Condition in Balancer Force-Jumbo
  Migrations Causes Duplicate Key Errors on Recipient Shard
- :issue:`SERVER-117010` [TEST ONLY] check_metadata_consistency.js
  continues to fail in csrs stepdown suite
- :issue:`SERVER-117252` Remove 6.0 multiversion testing from all higher
  branches
- :issue:`SERVER-117353` $majorityConfig incorrectly calculated for
  reconfig config commitment
- :issue:`SERVER-117854` GranularityRounderPowersOfTwo should assert for
  inf numbers
- :issue:`SERVER-117934` Validate UID of proxy Unix Domain Socket Peers
- :issue:`SERVER-117936` Extend the proxy protocol to support TLS
  sessions
- :issue:`SERVER-118419` Write ops with different dbVersions for a given
  db should not be batched together
- :issue:`SERVER-118514` DelayableTimeoutCallback ignores earlier
  timeout values
- :issue:`SERVER-118687` [8.0] Fix CheckMetadataConsistencyInBackground
  skip_tests
- :issue:`SERVER-118689` Support TLV extensions for proxy protocol V2
- :issue:`SERVER-118959` Support sub-TLV parsing for Proxy Protocol V2
- :issue:`SERVER-119228` [TEST ONLY] check_metadata_consistency_basic.js
  fails to ignore known issues and might fail to split chunks
- :issue:`SERVER-119261` Add unixProxySocketPrefix parameter and create
  unix socket
- :issue:`SERVER-119268` Ensure TLV parsing stops after proxy protocol
  length
- :issue:`SERVER-119530` Add a new server parameter to configure the
  maximum header size for proxy protocol on the unix proxy socket
- :issue:`SERVER-119689` Pin docker-systemctl-replacement to a specific
  commit
- :issue:`SERVER-119722` Indicate proxy unix socket information in logs
- :issue:`SERVER-119784` Add support for supplying TLV in the proxy
  protocol python testing server
- :issue:`SERVER-119977` Expand python proxy protocol server to support
  sending ssl tlvs
- :issue:`SERVER-120450` Upgrade MozJS to ESR 140.9
- :issue:`SERVER-120668` Disallow $trim with too large mask string
- :issue:`SERVER-120714` Update proxy unix socket tests to be
  incompatible with gRPC
- :issue:`SERVER-120724` Ensure that connections from the proxy unix
  socket expect a proxy protocol header
- :issue:`SERVER-121017` get monguard resmoke changes working on v8.0
- :issue:`SERVER-121089` [v8.0-only] Remove unnecessary CatalogCache
  access in TTL monitor
- :issue:`SERVER-121140` Fix unix_socket.js
- :issue:`SERVER-121142` Indicate when connected to unix socket in
  connection accepted log
- :issue:`SERVER-121216` Update proxyUnixSocketCheckPermissions
  parameter to check GID instead of UID
- :issue:`SERVER-121547` Proxy unix socket peer check fails to build on
  Mac
- :issue:`SERVER-121595` Rename proxy unix socket filename
- :issue:`SERVER-121653` Add an optional secondary port for the server
- :issue:`SERVER-121822` Clustered collections do not correctly filter
  out results with $lt on _id
- :issue:`SERVER-122034` Update check_metadata_consistency_snapshot.js
  to handle config failover scenarios
- :issue:`SERVER-122036` Exclude
  timeseries_insert_respect_max_bson_size_too_big.js from slow variants
- :issue:`SERVER-122239` [v8.0] Test
  reporting_compound_wildcard_index_prefixed_by_shard_key.js should
  consider that recipient shard also uses the shard key index
- :issue:`SERVER-122374` Handle NoSuchKey errors in
  cluster_parameter_commands.js
- :issue:`SERVER-122376` [v8.0][Test-only] Parameter
  configServerReadPreferenceForCatalogQueries must be identified as
  minFCV:8.0
- :issue:`SERVER-122483` [MozJS] std::to_chars compile failure on macOS
  < 10.15
- :issue:`SERVER-122629` Allow binary doc-diff to be applied to
  non-column subtypes
- :issue:`SERVER-122697` enableSharding built-in role missing
  cluster-level privilege, preventing updateZoneKeyRange
- :issue:`SERVER-122836` Update client metadata and auth logs to emit
  the source client when connected to proxy unix domain socket
- :issue:`SERVER-122960` Add configOnly flag to the mongoS and bypass
  configsvr checks
- :issue:`SERVER-123061` Fix incorrect test path in multiversion
  exclusion list
- :issue:`SERVER-123179` Introduce testing framework for standby
  clusters within the server
- :issue:`SERVER-123190` Disable shard registry and catalog cache when
  --configOnly is specified
- :issue:`SERVER-123222` Exclude Injector Nodes from RSM Server
  Selection in Standby Clusters
- :issue:`SERVER-123324` Introduce all commands test for configOnly mode
- :issue:`SERVER-123326` Add test coverage of configOnly mode with
  embedded config server
- :issue:`SERVER-123440` GeometryCollection with strict-winding polygon
  causes 2dsphere index key generation crash
- :issue:`SERVER-123507` Encrypted predicates inside a $vectorSearch
  prefilter should get replaced with encryption placeholders
- :issue:`SERVER-123553` Change index key generation log line error to
  LOGV2_WARNING
- :issue:`SERVER-123633` Fix handling of user $-prefixed fields
  colliding with internal metadata
- :issue:`SERVER-123688` Add null check in
  DocumentSourceSetVariableFromSubPipeline::reattachToOperationContext()
- :issue:`SERVER-123918` Validate runtimeConstants.userRoles in IDL
- :issue:`SERVER-123951` $_internalConvertBucketIndexStats should not
  return PauseExecution on failed index conversion
- :issue:`SERVER-124031` Ensure Exchange::getTargetConsumer correctly
  handles MaxKey
- :issue:`SERVER-124190` Forbid aggregate "exchange" field from
  non-internal clients
- :issue:`SERVER-124191` Add dochub link to config only mode error
  messages
- :issue:`SERVER-124285` Improve SBOM generation automation and change
  sbom_linter owner
- :issue:`SERVER-124308` Fix LDAPDNSResolverCache not updating cache
  correctly
- :issue:`SERVER-124915` Add clustered_collection_bounded_scan.js to
  multiversion testing denylist
- :issue:`SERVER-124959` Validate doc diff array bounds and
  $_internalApplyOplogUpdate BSON
- :issue:`SERVER-125063` Prohibit nesting of BSONColumn inside
  BSONColumn
- :issue:`SERVER-125492` Reduce frequency of OpenSSL primary DRBG reseed
  attempts
- :issue:`SERVER-125555` $elemMatch + $not should be able to use index
  scan
- :issue:`SERVER-125593` remove use of unsupported {:?} format in 8.0
  branch
- :issue:`SERVER-125721` [TEST ONLY][v8.0 ONLY] Prevent
  cannot_track_temporary_collection.js from running in multiversion
  environments
- :issue:`SERVER-125736` Backport .gitignore for
  resmoke_suites_derived.bzl
- :issue:`SERVER-125902` Rename injector tag
- :issue:`SERVER-125991` [v8.0] MongoS config-only mode backport to 8.0
- :issue:`SERVER-126049` MozJS per-scope heap limit check uses
  process-global GC counter
- :issue:`SERVER-126123` [v8.0] Adjust code and migrate new style
  mochalite js tests and APIs for "MongoS config-only mode" to 8.0 old
  style
- :issue:`WT-15535` Ensure checkpoint cleanup doesn't mark any readonly
  btree dirty

